--- a/Task2.ipynb
+++ b/Task2.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -63,17 +63,62 @@
      ]
     },
     {
-     "ename": "FileNotFoundError",
-     "evalue": "Video file not found: F:/AI_LAIA_STUFF/mmsegmentation/video.mp4",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[8], line 19\u001b[0m\n\u001b[0;32m     17\u001b[0m show_result_pyplot(model, img, result, show\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m, out_file\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mresult.jpg\u001b[39m\u001b[38;5;124m'\u001b[39m, opacity\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.5\u001b[39m)\n\u001b[0;32m     18\u001b[0m \u001b[38;5;66;03m# test a video and show the results\u001b[39;00m\n\u001b[1;32m---> 19\u001b[0m video \u001b[38;5;241m=\u001b[39m \u001b[43mmmcv\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mVideoReader\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mF:/AI_LAIA_STUFF/mmsegmentation/video.mp4\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m     20\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m frame \u001b[38;5;129;01min\u001b[39;00m video:\n\u001b[0;32m     21\u001b[0m    result \u001b[38;5;241m=\u001b[39m inference_model(model, frame)\n",
-      "File \u001b[1;32mf:\\AI_LAIA_STUFF\\miniconda\\envs\\openmmlab\\lib\\site-packages\\mmcv\\video\\io.py:65\u001b[0m, in \u001b[0;36mVideoReader.__init__\u001b[1;34m(self, filename, cache_capacity)\u001b[0m\n\u001b[0;32m     62\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m, filename, cache_capacity\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m10\u001b[39m):\n\u001b[0;32m     63\u001b[0m     \u001b[38;5;66;03m# Check whether the video path is a url\u001b[39;00m\n\u001b[0;32m     64\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m filename\u001b[38;5;241m.\u001b[39mstartswith((\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mhttps://\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mhttp://\u001b[39m\u001b[38;5;124m'\u001b[39m)):\n\u001b[1;32m---> 65\u001b[0m         \u001b[43mcheck_file_exist\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfilename\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mVideo file not found: \u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mfilename\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     66\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_vcap \u001b[38;5;241m=\u001b[39m cv2\u001b[38;5;241m.\u001b[39mVideoCapture(filename)\n\u001b[0;32m     67\u001b[0m     \u001b[38;5;28;01massert\u001b[39;00m cache_capacity \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m0\u001b[39m\n",
-      "File \u001b[1;32mf:\\AI_LAIA_STUFF\\miniconda\\envs\\openmmlab\\lib\\site-packages\\mmengine\\utils\\path.py:23\u001b[0m, in \u001b[0;36mcheck_file_exist\u001b[1;34m(filename, msg_tmpl)\u001b[0m\n\u001b[0;32m     21\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mcheck_file_exist\u001b[39m(filename, msg_tmpl\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mfile \u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m does not exist\u001b[39m\u001b[38;5;124m'\u001b[39m):\n\u001b[0;32m     22\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m osp\u001b[38;5;241m.\u001b[39misfile(filename):\n\u001b[1;32m---> 23\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mFileNotFoundError\u001b[39;00m(msg_tmpl\u001b[38;5;241m.\u001b[39mformat(filename))\n",
-      "\u001b[1;31mFileNotFoundError\u001b[0m: Video file not found: F:/AI_LAIA_STUFF/mmsegmentation/video.mp4"
-     ]
+     "data": {
+      "text/plain": [
+       "array([[[ 87,  94,  87],\n",
+       "        [ 69,  80,  74],\n",
+       "        [ 94,  99,  99],\n",
+       "        ...,\n",
+       "        [ 86,  90,  80],\n",
+       "        [ 88,  91,  81],\n",
+       "        [ 86,  90,  80]],\n",
+       "\n",
+       "       [[ 89,  96,  88],\n",
+       "        [ 73,  83,  76],\n",
+       "        [ 94,  99,  99],\n",
+       "        ...,\n",
+       "        [ 86,  90,  80],\n",
+       "        [ 88,  90,  79],\n",
+       "        [ 86,  90,  80]],\n",
+       "\n",
+       "       [[ 87,  94,  87],\n",
+       "        [ 73,  83,  76],\n",
+       "        [ 94,  99,  99],\n",
+       "        ...,\n",
+       "        [ 86,  90,  80],\n",
+       "        [ 86,  88,  78],\n",
+       "        [ 86,  90,  80]],\n",
+       "\n",
+       "       ...,\n",
+       "\n",
+       "       [[ 88,  63,  91],\n",
+       "        [ 88,  63,  91],\n",
+       "        [ 88,  61,  90],\n",
+       "        ...,\n",
+       "        [102,  77, 102],\n",
+       "        [100,  76, 101],\n",
+       "        [102,  77, 102]],\n",
+       "\n",
+       "       [[ 88,  61,  90],\n",
+       "        [ 88,  63,  91],\n",
+       "        [ 86,  61,  89],\n",
+       "        ...,\n",
+       "        [ 99,  73, 100],\n",
+       "        [100,  74, 100],\n",
+       "        [100,  74, 101]],\n",
+       "\n",
+       "       [[ 88,  61,  90],\n",
+       "        [ 88,  63,  91],\n",
+       "        [ 86,  61,  89],\n",
+       "        ...,\n",
+       "        [ 90,  60,  88],\n",
+       "        [ 89,  62,  89],\n",
+       "        [ 92,  65,  92]]], dtype=uint8)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
