Loading pretrained model

--- a/Task2.ipynb
+++ b/Task2.ipynb
@@ -145,6 +145,26 @@
     "#   result = inference_model(model, frame)\n",
     "#   show_result_pyplot(model, frame, result, wait_time=1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'batch_size': 4, 'num_workers': 4, 'persistent_workers': True, 'sampler': {'type': 'InfiniteSampler', 'shuffle': True}, 'dataset': {'type': 'ADE20KDataset', 'data_root': 'data/ade/ADEChallengeData2016', 'data_prefix': {'img_path': 'images/training', 'seg_map_path': 'annotations/training'}, 'pipeline': [{'type': 'LoadImageFromFile'}, {'type': 'LoadAnnotations', 'reduce_zero_label': True}, {'type': 'RandomResize', 'scale': (2048, 512), 'ratio_range': (0.5, 2.0), 'keep_ratio': True}, {'type': 'RandomCrop', 'crop_size': (512, 512), 'cat_max_ratio': 0.75}, {'type': 'RandomFlip', 'prob': 0.5}, {'type': 'PhotoMetricDistortion'}, {'type': 'PackSegInputs'}]}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "from mmengine.config import Config\n",
+    "\n",
+    "cfg = Config.fromfile('F:/AI_LAIA_STUFF/mmsegmentation/configs/resnest/resnest_s101-d8_fcn_4xb4-160k_ade20k-512x512.py')\n",
+    "print(cfg.train_dataloader)"
+   ]
   }
  ],
  "metadata": {
