Load model and test on image

--- a/Task2.ipynb
+++ b/Task2.ipynb
@@ -147,6 +147,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# To check config of the model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
@@ -164,6 +171,73 @@
     "\n",
     "cfg = Config.fromfile('F:/AI_LAIA_STUFF/mmsegmentation/configs/resnest/resnest_s101-d8_fcn_4xb4-160k_ade20k-512x512.py')\n",
     "print(cfg.train_dataloader)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Load the model an try on image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loads checkpoint by http backend from path: https://download.openmmlab.com/mmsegmentation/v0.5/resnest/fcn_s101-d8_512x512_160k_ade20k/fcn_s101-d8_512x512_160k_ade20k_20200807_145416-d3160329.pth\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"></pre>\n"
+      ],
+      "text/plain": []
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'predictions': array([[1, 1, 1, ..., 1, 1, 1],\n",
+       "        [1, 1, 1, ..., 1, 1, 1],\n",
+       "        [1, 1, 1, ..., 1, 1, 1],\n",
+       "        ...,\n",
+       "        [6, 6, 6, ..., 6, 6, 6],\n",
+       "        [6, 6, 6, ..., 6, 6, 6],\n",
+       "        [6, 6, 6, ..., 6, 6, 6]], dtype=int64),\n",
+       " 'visualization': []}"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from mmseg.apis import MMSegInferencer\n",
+    "\n",
+    "inferencer = MMSegInferencer(model='resnest_s101-d8_fcn_4xb4-160k_ade20k-512x512')\n",
+    "inferencer('F:/AI_LAIA_STUFF/mmsegmentation/demo/demo.png', show=True)"
    ]
   }
  ],
