--- a/_notebooks/_data-reduction.ipynb
+++ b/_notebooks/_data-reduction.ipynb
@@ -45,14 +45,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Selected Environment: local\n"
+      "Selected Environment: local\n",
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
      ]
     }
    ],
@@ -99,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +423,7 @@
        "9            9         3124         104      0.009     0.012  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -454,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -870,7 +872,7 @@
        "45 0.032           45          335          39      0.001     0.004  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -890,7 +892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -903,7 +905,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -921,40 +923,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Original JSON file size: 517.08MB (../_data/fashionpedia/ann_dir/instances_attributes_train2020.json)\n",
-      "Filtering data to 23 categories\n",
-      "Reducing data to 26227 images...\n",
-      "Original Image-dir size: 3.3G (../_data/fashionpedia/img_dir/train)\n",
-      "Original num. images: 45623\n",
-      "Original Annotations: 333401\n",
-      "New num. images: 26227\n",
-      "New Annotations: 74992\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\Laia\\OneDrive - Universitat Politècnica de Catalunya\\2nd Semester\\OR\\P2\\OR-P2\\_notebooks\\../src\\utils\\data.py:205: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df_images_new['file_name'] = df_images_new['file_name'].apply(lambda x: os.path.splitext(x)[0])\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "New JSON file size: 27.84MB (../_data/fashionpedia-reduction/img_dir/train/annotations-train.json)\n"
+      "Original JSON file size: 517.08MB (../_data/fashionpedia/ann_dir/instances_attributes_train2020.json)\n"
      ]
     }
    ],
@@ -976,19 +952,19 @@
     "\n",
     "# Generate masks for reduced data\n",
     "# ================================================================================================\n",
-    "# print(\"\\n\" + \"=\"*80)\n",
-    "# print(f\"Generating masks for {train_or_val} data\")\n",
-    "# palette = generate_palette(len(classes))\n",
-    "# new_annotations_dir =  os.path.join(data_dir, 'fashionpedia-reduction/ann_dir/')\n",
+    "print(\"\\n\" + \"=\"*80)\n",
+    "print(f\"Generating masks for {train_or_val} data\")\n",
+    "palette = generate_palette(len(classes))\n",
+    "new_annotations_dir =  os.path.join(data_dir, 'fashionpedia-reduction/ann_dir/')\n",
     "\n",
-    "# save_dir = os.path.join(new_annotations_dir, train_or_val)\n",
-    "# fp = Fashionpedia(new_json_file)\n",
-    "# generate_masked_imgs(fp, save_dir, palette, convert_3D=True)\n"
+    "save_dir = os.path.join(new_annotations_dir, train_or_val)\n",
+    "fp = Fashionpedia(new_json_file)\n",
+    "generate_masked_imgs(fp, save_dir, palette, convert_3D=False)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1018,7 +994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1071,14 +1047,14 @@
     "\n",
     "# Generate masks for reduced data\n",
     "# ================================================================================================\n",
-    "# print(\"\\n\" + \"=\"*80)\n",
-    "# print(f\"Generating masks for {train_or_val} data\")\n",
-    "# palette = generate_palette(len(classes))\n",
-    "# new_annotations_dir =  os.path.join(data_dir, 'fashionpedia-reduction/ann_dir/')\n",
+    "print(\"\\n\" + \"=\"*80)\n",
+    "print(f\"Generating masks for {train_or_val} data\")\n",
+    "palette = generate_palette(len(classes))\n",
+    "new_annotations_dir =  os.path.join(data_dir, 'fashionpedia-reduction/ann_dir/')\n",
     "\n",
-    "# save_dir = os.path.join(new_annotations_dir, train_or_val)\n",
-    "# fp = Fashionpedia(new_json_file)\n",
-    "# generate_masked_imgs(fp, save_dir, palette, convert_3D=True)\n"
+    "save_dir = os.path.join(new_annotations_dir, train_or_val)\n",
+    "fp = Fashionpedia(new_json_file)\n",
+    "generate_masked_imgs(fp, save_dir, palette, convert_3D=False)\n"
    ]
   },
   {
@@ -1090,7 +1066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
