Update to use reduced dataset root and generate both dataset and txt files

--- a/_notebooks/_data-reduction.ipynb
+++ b/_notebooks/_data-reduction.ipynb
@@ -45,16 +45,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Selected Environment: local\n",
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
+      "Selected Environment: local\n"
      ]
     }
    ],
@@ -101,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -423,7 +421,7 @@
        "9            9         3124         104      0.009     0.012  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -456,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -872,7 +870,7 @@
        "45 0.032           45          335          39      0.001     0.004  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -892,7 +890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -905,7 +903,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -923,14 +921,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Original JSON file size: 517.08MB (../_data/fashionpedia/ann_dir/instances_attributes_train2020.json)\n"
+      "Original JSON file size: 517.08MB (../_data/fashionpedia/ann_dir/instances_attributes_train2020.json)\n",
+      "Filtering data to 23 categories\n",
+      "Reducing data to 26227 images...\n",
+      "Original Image-dir size: 3.3G (../_data/fashionpedia/img_dir/train)\n",
+      "Original num. images: 45623\n",
+      "Original Annotations: 333401\n",
+      "New num. images: 26227\n",
+      "New Annotations: 74992\n",
+      "Copying images to new folder...\n",
+      "New Image-dir size: 2.0G (../_data/fashionpedia-reduction/img_dir/train/)\n",
+      "Saved image file names to txt file\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Laia\\OneDrive - Universitat Politècnica de Catalunya\\2nd Semester\\OR\\P2\\OR-P2\\_notebooks\\../src\\utils\\data.py:220: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df_images_new['file_name'] = df_images_new['file_name'].apply(lambda x: os.path.splitext(x)[0])\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "New JSON file size: 27.84MB (../_data/fashionpedia-reduction/img_dir/train/annotations-train.json)\n",
+      "\n",
+      "================================================================================\n",
+      "Generating masks for train data\n",
+      "loading annotations into memory...\n",
+      "Done (t=1.63s)\n",
+      "creating index...\n",
+      "index created!\n",
+      "loading attributes...\n",
+      "attributes index created!\n",
+      "Number of images: 26227\n",
+      "Saving files to ../_data/fashionpedia-reduction/ann_dir/train\n",
+      "1000 images processed.\n",
+      "2000 images processed.\n",
+      "3000 images processed.\n",
+      "4000 images processed.\n",
+      "5000 images processed.\n",
+      "6000 images processed.\n",
+      "7000 images processed.\n",
+      "8000 images processed.\n",
+      "9000 images processed.\n",
+      "10000 images processed.\n",
+      "11000 images processed.\n",
+      "12000 images processed.\n",
+      "13000 images processed.\n",
+      "14000 images processed.\n"
      ]
     }
    ],
