--- a/_notebooks/_data-augmentation.ipynb
+++ b/_notebooks/_data-augmentation.ipynb
@@ -9,9 +9,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "# Autoreload modules\n",
     "%load_ext autoreload\n",
@@ -71,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +92,7 @@
       "VOC Instance seg.: 2913 => warning! not all imgs have segmented imgs?\n",
       "VOC Semantic seg.: 2913 => warning! not all imgs have segmented imgs?\n",
       "Fashionpedia imgs: 45623\n",
-      "Fashionpedia seg.: 42789\n"
+      "Fashionpedia seg.: 45623\n"
      ]
     }
    ],
@@ -130,27 +139,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fashionpedia imgs: 3200\n",
-      "Fashionpedia seg.: 1158\n"
+      "Fashionpedia imgs: 45623\n",
+      "Fashionpedia seg.: 45623\n"
      ]
     }
    ],
    "source": [
     "# Fashionpedia dataset\n",
-    "indx = 1\n",
+    "indx = 0\n",
     "train_or_val = ['train', 'val'][indx]\n",
     "\n",
     "fashion_dir = os.path.join(data_dir, 'fashionpedia/')\n",
     "\n",
     "fashion_seg_dir = os.path.join(fashion_dir, f\"ann_dir/{train_or_val}/\")\n",
-    "fashion_img_dir = os.path.join(fashion_dir, \"img_dir/\" + train_or_val + \"/\")\n",
+    "fashion_img_dir = os.path.join(fashion_dir, f\"img_dir/{train_or_val}/\")\n",
     "\n",
     "print(\"Fashionpedia imgs:\", len(os.listdir(fashion_img_dir)))\n",
     "print(\"Fashionpedia seg.:\", len(os.listdir(fashion_seg_dir)))"
@@ -158,13 +167,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "fashion_dir_daug = os.path.join(data_dir, 'fashionpedia-daug/')\n",
     "fashion_seg_dir_daug = os.path.join(fashion_dir_daug, f\"ann_dir/{train_or_val}/\")\n",
-    "fashion_img_dir_daug = os.path.join(fashion_dir_daug, \"img_dir/\" + train_or_val + \"/\")\n",
+    "fashion_img_dir_daug = os.path.join(fashion_dir_daug, f\"img_dir/{train_or_val}/\")\n",
     "\n",
     "os.makedirs(fashion_dir_daug, exist_ok=True)\n",
     "os.makedirs(fashion_img_dir_daug, exist_ok=True)\n",
@@ -173,17 +182,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Missing: ../_data/fashionpedia/ann_dir/val/003d41dd20f271d27219fe7ee6de727d_seg.png\n",
-      "jpg\n"
-     ]
-    },
     {
      "ename": "error",
      "evalue": "OpenCV(4.9.0) D:\\a\\opencv-python\\opencv-python\\opencv\\modules\\core\\src\\arithm.cpp:214: error: (-209:Sizes of input arguments do not match) The operation is neither 'array op array' (where arrays have the same size and type), nor 'array op scalar', nor 'scalar op array' in function 'cv::binary_op'\n",
@@ -191,7 +192,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31merror\u001b[0m                                     Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[9], line 16\u001b[0m\n\u001b[0;32m     14\u001b[0m \u001b[38;5;66;03m# Get the image and segmentation mask and apply data augmentation\u001b[39;00m\n\u001b[0;32m     15\u001b[0m tar_img, tar_seg \u001b[38;5;241m=\u001b[39m get_fashion_img_seg(img_id, fashion_img_dir, fashion_seg_dir, plot\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[1;32m---> 16\u001b[0m _,_,_,_, final_img, final_seg \u001b[38;5;241m=\u001b[39m \u001b[43mvoc_data_augmentation\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtar_img\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtar_seg\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mvoc_img_dir\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mvoc_ins_seg\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcover_factor\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m0.6\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m     18\u001b[0m \u001b[38;5;66;03m# Create the new file names\u001b[39;00m\n\u001b[0;32m     19\u001b[0m seg_file \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(fashion_seg_dir_daug, img_id \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m_seg.png\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "Cell \u001b[1;32mIn[29], line 16\u001b[0m\n\u001b[0;32m     14\u001b[0m \u001b[38;5;66;03m# Get the image and segmentation mask and apply data augmentation\u001b[39;00m\n\u001b[0;32m     15\u001b[0m tar_img, tar_seg \u001b[38;5;241m=\u001b[39m get_fashion_img_seg(img_id, fashion_img_dir, fashion_seg_dir, plot\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[1;32m---> 16\u001b[0m _,_,_,_, final_img, final_seg \u001b[38;5;241m=\u001b[39m \u001b[43mvoc_data_augmentation\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtar_img\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtar_seg\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mvoc_img_dir\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mvoc_ins_seg\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcover_factor\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m0.6\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m     18\u001b[0m \u001b[38;5;66;03m# Create the new file names\u001b[39;00m\n\u001b[0;32m     19\u001b[0m seg_file \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(fashion_seg_dir_daug, img_id \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m_seg.png\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
       "File \u001b[1;32mc:\\Users\\Laia\\OneDrive - Universitat Politècnica de Catalunya\\2nd Semester\\OR\\P2\\OR-P2\\_notebooks\\../src\\utils\\data_augmentation.py:92\u001b[0m, in \u001b[0;36mvoc_data_augmentation\u001b[1;34m(tar_img, tar_seg, voc_img_dir, voc_seg_dir, cover_factor, verbose)\u001b[0m\n\u001b[0;32m     89\u001b[0m \u001b[38;5;66;03m# ====================================================================================================\u001b[39;00m\n\u001b[0;32m     91\u001b[0m tar_img_prep \u001b[38;5;241m=\u001b[39m cv2\u001b[38;5;241m.\u001b[39mbitwise_and(tar_img, inverse_mask)\n\u001b[1;32m---> 92\u001b[0m final_seg \u001b[38;5;241m=\u001b[39m \u001b[43mcv2\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mbitwise_and\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtar_seg\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43minverse_mask\u001b[49m\u001b[43m[\u001b[49m\u001b[43m:\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m:\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     93\u001b[0m final_img \u001b[38;5;241m=\u001b[39m tar_img\u001b[38;5;241m.\u001b[39mcopy()\n\u001b[0;32m     94\u001b[0m final_img[y:y\u001b[38;5;241m+\u001b[39mh, x:x\u001b[38;5;241m+\u001b[39mw] \u001b[38;5;241m=\u001b[39m cv2\u001b[38;5;241m.\u001b[39madd(tar_img_prep[y:y\u001b[38;5;241m+\u001b[39mh, x:x\u001b[38;5;241m+\u001b[39mw], ins_img)\n",
       "\u001b[1;31merror\u001b[0m: OpenCV(4.9.0) D:\\a\\opencv-python\\opencv-python\\opencv\\modules\\core\\src\\arithm.cpp:214: error: (-209:Sizes of input arguments do not match) The operation is neither 'array op array' (where arrays have the same size and type), nor 'array op scalar', nor 'scalar op array' in function 'cv::binary_op'\n"
      ]
